test/error/0003-lval1.c
/*
PATTERN: c:8
PATTERN: lvalue
*/
int
main()
{
	3++;
}
